# SoundPax

./: .gitignore  .templateignore  AGENTS.md  README.md  TEMPLATE.md  pubspec.yaml  template.lock.json
DOCS/: SBOM.md  SCRATCHPAD.md  SUMMARY.md  feature.md
android/: gradle.properties
android/app/: build.gradle.kts
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/models/: app_state.dart  pad_state.dart
lib/screens/: bank_screen.dart  pad_screen.dart
lib/services/: sound_export.dart
lib/theme/: app_theme.dart
lib/widgets/: onboarding_overlay.dart  pad_grid.dart  pad_inspector.dart  pad_widget.dart  record_panel.dart  transport_bar.dart  waveform_display.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: audio_processor.rs  audio_types.rs  bank_manager.rs  file_io.rs  mod.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_soundpax.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_soundpax.podspec
rust_builder/windows/: CMakeLists.txt
scripts/: create_from_template.bat  create_from_template.ps1  run_web.bat  run_windows.bat
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
(+15 files in other folders)
